fix: no jump when hiding progress

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,10 +16,6 @@ body {
   box-sizing: border-box;
 }
 
-.hidden {
-  display: none !important;
-}
-
 button,
 label,
 input {
@@ -29,9 +25,6 @@ input {
 @media (orientation: portrait) {
   #controls {
     margin: 80px auto 110px;
-  }
-  #main {
-    min-height: 300px;
   }
 }
 @media (orientation: landscape) {
@@ -44,7 +37,6 @@ input {
     align-items: center;
     max-width: 460px;
     margin: 0 auto 52px;
-    min-height: 140px;
   }
   #controls {
     max-width: 280px;
